data/collection/fixes/descriptions/scala/scala-6780
Consider this:
{code}import scala.concurrent.duration._

trait Foo { implicit val timeout = 1 second }
trait Bar extends Foo { implicit override val timeout = 2 seconds }
```scala

In 2.10.0-RC2 and 2.10.0-RC3, the implicit conversion that gives the seconds method to Int fails:
```
Welcome to Scala version 2.10.0-RC3 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_37).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :load foo.scala
Loading foo.scala...
import scala.concurrent.duration._
warning: there were 1 feature warnings; re-run with -feature for details
defined trait Foo
<console>:11: error: value seconds is not a member of Int
       trait Bar extends Foo { implicit override val timeout = 2 seconds }
                                                                 ^
{code}

When the implicit keyword is removed from the overridden val, the implicit conversion works properly.